logout y docs de swagger modificada
