# src/app/Http/Controllers/AuthController.php
@@ -180,4 +180,68 @@ class AuthController extends Controller
             return response()->json(['error' => 'Refresh token inválido'], 401);
         }
     }
+
+    // documentacion de logout
+    #[OA\Post(
+    path: "/api/logout",
+    summary: "Cerrar sesión",
+    tags: ["Auth"],
+    responses: [
+        new OA\Response(
+            response: 200,
+            description: "Logout correcto",
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(
+                        property: "message",
+                        type: "string",
+                        example: "Logout correcto"
+                    )
+                ]
+            )
+        ),
+        new OA\Response(
+            response: 400,
+            description: "No se pudo cerrar sesión",
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(
+                        property: "error",
+                        type: "string",
+                        example: "No se pudo cerrar sesión"
+                    )
+                ]
+            )
+        )
+    ]
+)]
+    public function logout(Request $request)
+{
+    try {
+        // 1. Invalidar access token si existe
+        if ($request->cookie('access_token')) {
+            JWTAuth::setToken($request->cookie('access_token'))->invalidate();
+        }
+
+        // 2. Invalidar refresh token si existe
+        if ($request->cookie('refresh_token')) {
+            JWTAuth::setToken($request->cookie('refresh_token'))->invalidate();
+        }
+
+        // 3. Borrar cookies
+        $clearAccess = cookie()->forget('access_token');
+        $clearRefresh = cookie()->forget('refresh_token');
+
+        return response()->json([
+            'message' => 'Logout correcto'
+        ])->withCookie($clearAccess)
+          ->withCookie($clearRefresh);
+
+    } catch (\Exception $e) {
+        return response()->json([
+            'error' => 'No se pudo cerrar sesión'
+        ], 400);
+    }
+}
+
 }
